--- a/QueueManegement/package.json
+++ b/QueueManegement/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "projeto",
+  "name": "QueueManegement",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +35,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":  "https://localhost:8080"
+
 }
